--- a/quiz_app/templates/base.html
+++ b/quiz_app/templates/base.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('index') }}">
-                <i class="bi bi-mortarboard-fill me-2"></i>Quiz App
+                Quiz App
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -22,33 +22,33 @@
                     {% if current_user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('index') }}">
-                                <i class="bi bi-house-fill me-2"></i>Home
+                                Home
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('create_quiz') }}">
-                                <i class="bi bi-plus-circle-fill me-2"></i>Create Quiz
+                                Create Quiz
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('view_results') }}">
-                                <i class="bi bi-trophy-fill me-2"></i>My Results
+                                My Results
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('logout') }}">
-                                <i class="bi bi-box-arrow-right me-2"></i>Logout
+                                Logout
                             </a>
                         </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('login') }}">
-                                <i class="bi bi-box-arrow-in-right me-2"></i>Login
+                                Login
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('register') }}">
-                                <i class="bi bi-person-plus-fill me-2"></i>Register
+                                Register
                             </a>
                         </li>
                     {% endif %}
