--- a/quiz_app/templates/index.html
+++ b/quiz_app/templates/index.html
@@ -14,7 +14,7 @@
                         <p class="card-text">Ready to test your knowledge?</p>
                         <div class="d-flex justify-content-center">
                             <a href="{{ url_for('create_quiz') }}" class="btn btn-custom">
-                                <i class="bi bi-plus-circle me-2"></i>Create Quiz
+                                Create Quiz
                             </a>
                         </div>
                     </div>
@@ -32,15 +32,15 @@
                         <p class="card-text">{{ quiz.description }}</p>
                         <div class="quiz-info mb-3">
                             <small class="text-muted d-block">
-                                <i class="bi bi-clock"></i> Time limit: 
+                                Time limit: 
                                 {{ "%d:%02d"|format(quiz.time_limit // 60, quiz.time_limit % 60) }}
                             </small>
                             <small class="text-muted d-block">
-                                <i class="bi bi-question-circle"></i> Questions: 
+                                Questions: 
                                 {{ quiz.questions|length }}
                             </small>
                             <small class="text-muted d-block">
-                                <i class="bi bi-person"></i> Created by: 
+                                Created by: 
                                 {% if quiz.creator_id == current_user.id %}
                                     you
                                 {% else %}
@@ -50,7 +50,7 @@
                         </div>
                         <div class="d-grid">
                             <a href="{{ url_for('take_quiz', quiz_id=quiz.id) }}" class="btn btn-custom">
-                                <i class="bi bi-play-circle me-2"></i>Start Quiz
+                                Start Quiz
                             </a>
                         </div>
                     </div>
@@ -62,10 +62,10 @@
         <p class="lead">Test your knowledge with our interactive quizzes!</p>
         <div class="mt-4">
             <a href="{{ url_for('login') }}" class="btn btn-custom me-2">
-                <i class="bi bi-box-arrow-in-right me-2"></i>Login
+                Login
             </a>
             <a href="{{ url_for('register') }}" class="btn btn-custom-secondary">
-                <i class="bi bi-person-plus me-2"></i>Register
+                Register
             </a>
         </div>
     {% endif %}
